[package]
name = "rtde-wm"
version = "0.1.0"
edition = "2021"
authors = ["Dmitri Proskuriakov <dmitri.proskuriakov@gmail.com>"]

[[bin]]
name = "rtwm"
path = "src/main.rs"

[dependencies]
libc = "0.2.133"
nix = "0.26.2"
serde = { version = "1.0.188", features = ["derive"] }
toml = "0.7.6"
x11 = "2.20.0"
